src/test/compile-fail/import-glob-rename.rs
// error-pattern:expected

use baz = foo::*;

mod foo {
    fn bar() {}
}

fn main() {
}